<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".apiClasses.FoodDetailFragment"
    android:background="@drawable/background">

    <ImageButton
        android:id="@+id/backImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/gobackicon_33"
        android:background="@android:color/transparent"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/foodNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/backImageButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/add_food_name"
        android:textStyle="bold"
        android:textColor="@color/lightOrange"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/foodNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightOrange"
            android:background="@android:color/transparent"
            android:text="@string/add_weight"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/foodNameTextView"
        app:layout_constraintStart_toEndOf="@+id/weightInputLayout"
        android:text="@string/grams"
        android:textStyle="bold"
        android:textColor="@color/lightOrange"/>

    <TextView
        android:id="@+id/nutritionalInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/weightInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/nutritional_information"
        android:textColor="@color/lightOrange"/>

    <TextView
        android:id="@+id/caloriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/nutritionalInfoTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/add_calories"
        android:textColor="@color/lightOrange"/>

    <TextView
        android:id="@+id/proteinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/caloriesTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/add_proteins"
        android:textColor="@color/lightOrange"/>

    <TextView
        android:id="@+id/fatsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/proteinTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/add_fats"
        android:textColor="@color/lightOrange"/>

    <TextView
        android:id="@+id/carbsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fatsTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:text="@string/add_carbohydrates"
        android:textColor="@color/lightOrange"/>

    <Button
        android:id="@+id/addBreakfastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/lightOrange"
        android:text="Track"/>

    <Button
        android:id="@+id/remove_food_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/update_food_btn"
        android:text="Remove"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/update_food_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/remove_food_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Update"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>