<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentification.UserActivity"
    android:background="@drawable/diet_plan_background">

    <FrameLayout
        android:id="@+id/user_info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/login_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/welcome_to_text_2"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/login_welcome_message_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_welcome_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:text="@string/fitness_app_text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/motivational_message_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_card_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="90dp"
        android:text="Healty eating,healty living"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_card_view"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_activity_card_view_gradient">

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/log_in_string"
                android:textColor="#855420"
                android:backgroundTint="@android:color/transparent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/sign_up_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guest_card_view"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/user_activity_card_view_gradient">

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up_string"
                android:textColor="#855420"
                android:backgroundTint="@android:color/transparent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/guest_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/user_activity_card_view_gradient">


            <Button
                android:id="@+id/continue_as_guest_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/continue_as_guest_string"
                android:textColor="#855420"
                android:backgroundTint="@android:color/transparent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
