<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_yellow_background"
    android:orientation="vertical"
    tools:context=".Fragments.HomeFragment">

    <RelativeLayout
        android:id="@+id/progress_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nutrient_bar_id"
        app:layout_constraintTop_toBottomOf="@+id/appName_textView">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:progressDrawable="@drawable/circle_progress_bar"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/caloriesprogresstextview"
            android:textColor="@color/lightOrange"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/appName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toStartOf="@+id/profileImageButton"
        android:text="@string/name_myfitness_app"
        android:textColor="#5FA77B"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/profileImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        app:tint="#5FA77B" />

    <include
        android:id="@+id/nutrient_bar_id"
        layout="@layout/nutrient_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/breakfastcardview"
        android:layout_marginBottom="16dp"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/breakfastcardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/lunchcardview"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:background="@drawable/rectangular_form"
        android:backgroundTint="@color/gray"
        android:clickable="false"
        android:focusable="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cardview_home_color">

                <ImageView
                    android:id="@+id/breakfastimageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/breakfast_svgrepo_com" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/breakfastimageView"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:text="@string/add_breakfast"/>

                <ImageButton
                    android:id="@+id/addbreakfastimgbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/baseline_add_24"
                    app:tint="@color/white"
                    android:clickable="true"
                    android:focusable="true"/>

            </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/lunchcardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/dinnercardview"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_home_color">

            <ImageView
                android:id="@+id/lunchimageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/lunch_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/lunchimageView"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:text="@string/add_lunch"/>

            <ImageButton
                android:id="@+id/addlunchbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_add_24"
                app:tint="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/dinnercardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/snackcardview"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_home_color">

            <ImageView
                android:id="@+id/dinnerimageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/dinner_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/dinnerimageView"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:text="@string/add_dinner"/>

            <ImageButton
                android:id="@+id/adddinnerbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_add_24"
                app:tint="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/snackcardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cardview_home_color">

            <ImageView
                android:id="@+id/snackimageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/chocolate_snack_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/snackimageView"
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:text="@string/add_snack"/>

            <ImageButton
                android:id="@+id/addsnackbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:background="@android:color/transparent"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_add_24"
                app:tint="@color/white" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>